# rust_react_ssr

./: Cargo.toml  README.md
.github/workflows/: build.yml
client/: index.html  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json
client/src/: .prettierrc.json  App.scss  App.tsx  index.scss  index.tsx  ssr.tsx
client/webpack/: webpack.client.js  webpack.ssr.js
src/: cache.rs  main.rs  ssr.rs  tls.rs
