[package]
name = "rust_react_ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
dotenv = "0.15.0"
env_logger = "0.9.3"
futures = "0.3.25"
lazy_static = "1.4.0"
log = "0.4.17"
v8 = "0.55.0"
