[package]
name = "rust_react_ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.2.1", features = ["rustls"] }
clap = { version = "4.0.26", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.3"
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
once_cell = "1.16.0"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
v8 = "0.55.0"
